<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/black"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/btnBackProfile"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back_button"
            app:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/headerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sansation_regular"
            app:layout_constraintStart_toEndOf="@id/btnBackProfile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:maxWidth="300dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/new_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profileIcon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_user_profile"
                    android:contentDescription="@string/profile_picture"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/initials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sansation_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/entrant"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:textColor="#CCCCCC"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sansation_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:layout_marginTop="5dp"
                    android:enabled="true"
                    android:fontFamily="@font/sansation_regular"
                    android:hint="@string/user_name"
                    android:background="@drawable/edit_text_background"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:onClick="clearTextOnClick"
                    android:textColorHint="#CCCCCC"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/sansation_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:enabled="true"
                    android:layout_marginTop="5dp"
                    android:hint="@string/example_example_com"
                    android:background="@drawable/edit_text_background"
                    android:padding="12dp"
                    android:fontFamily="@font/sansation_regular"
                    android:textColor="@color/black"
                    android:textColorHint="#CCCCCC"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="16sp"
                    android:fontFamily="@font/sansation_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:enabled="true"
                    android:hint="@string/optional"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginTop="5dp"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/sansation_regular"
                    android:textColorHint="#CCCCCC"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sansation_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/gender"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white" />

                <Spinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:padding="12dp"
                    android:spinnerMode="dropdown"
                    android:dropDownWidth="match_parent"
                    android:layout_marginTop="5dp"
                    android:popupBackground="@drawable/dropdown_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sansation_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/date_of_birth"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/dobEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:enabled="true"
                    android:fontFamily="@font/sansation_regular"
                    android:hint="@string/mm_dd_yyyy"
                    android:background="@drawable/edit_text_background"
                    android:padding="12dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="#CCCCCC"
                    android:focusable="false"
                    android:inputType="none" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="left"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/notifications"
                        android:fontFamily="@font/sansation_bold"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                    <Switch
                        android:id="@+id/switch_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/white"
                        android:trackTint="#B3FFFFFF"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/clearAllButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#FF6F61"
                        android:fontFamily="@font/sansation_bold"
                        android:letterSpacing="0.05"
                        android:textColor="#FFFFFFFF"
                        android:padding="12dp"
                        android:textStyle="bold"
                        android:text="@string/clear_all" />

                    <Button
                        android:id="@+id/saveButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#1DB954"
                        android:fontFamily="@font/sansation_bold"
                        android:letterSpacing="0.05"
                        android:textColor="#FFFFFFFF"
                        android:padding="12dp"
                        android:textStyle="bold"
                        android:layout_marginStart="8dp"
                        android:text="@string/save" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
